	  with all the other lists, have the replace list accept all the
	  same function keys as the search list, and clarify a few
	  shortcut descriptions.
	- Convert nano to use the new parse_num() function to read in
	  numeric values at the command line and in the rcfile, and
	  duplicate the messages used in the rcfile in the command line
	  for consistency. (David Benbennick)  DLR: Convert tabsize,
	  wrap_at, and fill to ssize_t in order to work with
	  parse_num() properly and also to increase their capacity
	  while keeping the ability to hold negative numbers in case of
	  errors.  Also exit instead of calling usage() in the event of
	  an invalid fill value, for consistency with how an invalid
	  tabsize value is handled.  Finally, handle invalid tabsize
	  entries in the rcfile the same way as on the command line,
	  and reset tabsize and wrap_at to their default values if
	  invalid rcfile entries are specified for them.
	- Remove several unnecessary reset_cursor() calls. (David
	  Benbennick)
	- Include <sys/types.h> in proto.h. (David Benbennick)  DLR:
	  Remove some redundant inclusions of <sys/types.h> elsewhere.
	- Move the main terminal initialization functions, aside from 
	  initscr(), into a new terminal_init() function, and convert 
	  nano to use it. (DLR)
	- Convert placewewant to a size_t, and convert some functions
	  that use it as a parameter to use size_t as well. (David
	  Benbennick and DLR)
	- Overhaul the paragraph searching code and some of the justify
	  code to clarify it and fix a bug where searches from the
	  previous paragraph would move up too far.  Also make
	  quotestr-related variables global so that they only have to be
	  compiled once, and remove the no-longer-needed IFREG() macro.
	  New functions begpar() and inpar(); changes to quote_length(),
	  quotes_match(), do_para_search(), do_para_begin(),
	  do_para_end(), and do_justify(). (David Benbennick)
	- Readded the errors flag and moved the ending prompt from